--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "keywords": [],
   "author": "Thibaut Batal <thibaut.batal@le-campus-numerique.fr>",
   "contributors": [],
-  "direcories":{
+  "direcories": {
     "bin": "module/",
     "lib": "src/",
     "test": "tests/"
@@ -56,7 +56,7 @@
     "NODE_ENV": "development",
     "SRC_ROOT": "C:\\Users\\taubh\\GitProjects\\web\\demos_templates\\Back\\JS-Util\\module\\src\\"
   },
-  "main": "module/util.js",
+  "main": "module/_util.js",
   "module": "src/_util.js",
   "scripts": {
     "build": "npm run build:src && npm run build:tests",
