--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "NODE_ENV": "development",
     "SRC_ROOT": "C:\\Users\\taubh\\GitProjects\\web\\demos_templates\\Back\\JS-Util\\module\\src\\"
   },
-  "main": "src/_util.js",
-  "module": "module/_util.js",
+  "main": "module/_util.js",
+  "module": "src/_util.js",
   "scripts": {
     "build": "npm run build:src && npm run build:tests",
     "build:src": "ttsc -p ./tsconfig.json",
