--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 
     "declaration": true,
     "resolveJsonModule": true,
-    /*"experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
+    "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
 
     "baseUrl": "./src/",
     "paths": {
