--- a/package.json
+++ b/package.json
@@ -12,39 +12,42 @@
     "test": "tests/"
   },
   "dependencies": {
+    "alert-sound-notify": "^0.0.8",
     "exceljs": "^4.2.0",
     "fs-extra": "^9.0.1",
     "io": "^1.0.3",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
+    "jsonfile": "^6.1.0",
     "md5": "^2.3.0",
+    "node-beep": "^0.0.3",
     "os": "~0.1.1",
     "output-manager": "~3.0.0",
     "random": "^2.2.0",
     "randomstring": "^1.1.5",
     "read-file-string": "^1.0.4",
     "safe-compare": "^1.1.4",
-    "socket.io": "^3.1.0",
-    "socket.io-client": "^3.1.0",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^3.1.2",
     "write-file": "~1.0.0"
   },
   "devDependencies": {
-    "babel": "~0.0.1",
     "@babel/core": "~7.12.3",
-    "@babel/plugin-syntax-class-properties": "~7.12.1",
-    "babel-plugin-transform-class-properties": "~6.24.1",
     "@babel/node": "~7.12.6",
+    "@babel/plugin-syntax-class-properties": "~7.12.1",
     "@babel/preset-env": "~7.12.1",
     "@babel/preset-typescript": "~7.12.13",
+    "@k-foss/ts-esnode": "^2.0.2",
+    "@types/jest": "26.0.20",
+    "babel": "~0.0.1",
+    "babel-plugin-transform-class-properties": "~6.24.1",
     "dotenv": "^8.2.0",
     "jest": "^26.6.3",
-    "@types/jest": "26.0.20",
-    "typescript": "^3.3.3",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.3",
     "tsconfig-paths": "^3.9.0",
-    "typescript-transform-paths": "^2.2.3",
+    "tslint": "^5.12.1",
     "ttypescript": "^1.5.7",
-    "@k-foss/ts-esnode": "^2.0.2",
-    "tslint": "^5.12.1"
+    "typescript": "^3.3.3",
+    "typescript-transform-paths": "^2.2.3"
   },
   "jest": {
     "setupFiles": [
@@ -65,6 +68,7 @@
     "build:src": "ttsc -p ./tsconfig.json",
     "build:tests": "ttsc -p ./tests/tsconfig.tests.json",
     "build_babel": "babel ./src/ --out-file ./compiled/src/",
+    "postbuild:src": "node module/back/audio/sound/beep.js",
     "clean": "rd /s /q \"module/\"",
     "debug": "node --inspect-brk ./src/util.js",
     "dev": "node --loader @k-foss/ts-esnode --experimental-specifier-resolution=node ./src/util.ts",
